// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatMultilineComments should flatten comments and remove tags 1`] = `
Array [
  Object {
    "comments": Array [
      Object {
        "comment": ":add implementation",
        "line": 10,
      },
      Object {
        "comment": "Please don't forget review",
        "line": 11,
      },
      Object {
        "comment": "another note",
        "line": 20,
      },
      Object {
        "comment": "this should present",
        "line": 13,
      },
      Object {
        "comment": "missingBody",
        "line": 1,
      },
    ],
    "file": "tests/mockFiles/mockFile0.js",
  },
  Object {
    "comments": Array [
      Object {
        "comment": ":add implementation",
        "line": 20,
      },
      Object {
        "comment": "Please don't forget review",
        "line": 21,
      },
      Object {
        "comment": "another note",
        "line": 2,
      },
      Object {
        "comment": "this should present",
        "line": 5,
      },
    ],
    "file": "tests/mockFiles/mockFile2.js",
  },
]
`;

exports[`FormatSingleComment should format comment consistently 1`] = `
"<!-- mock-comment-identifier -->
## mock title
<details>
<summary><strong>tests/mockFiles/mockFile0.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 10\` 

##### NOTE

- [ ] Please don't forget review \`Line: 11\` 
- [ ] another note \`Line: 20\` 

##### tODo:

- [ ] this should present \`Line: 13\` 

##### missingBody

- [ ] <space> \`Line: 1\`
</details>

<details>
<summary><strong>tests/mockFiles/mockFile2.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 20\` 

##### NOTE

- [ ] Please don't forget review \`Line: 21\` 
- [ ] another note \`Line: 2\` 

##### tODo:

- [ ] this should present \`Line: 5\` 
</details>

"
`;

exports[`FormatSingleComment should tag actor with reviewMsg 1`] = `
"<!-- mock-comment-identifier -->
## mock-title
<details>
<summary><strong>tests/mockFiles/mockFile0.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 10\` 

##### NOTE

- [ ] Please don't forget review \`Line: 11\` 
- [ ] another note \`Line: 20\` 

##### tODo:

- [ ] this should present \`Line: 13\` 

##### missingBody

- [ ] <space> \`Line: 1\`
</details>

<details>
<summary><strong>tests/mockFiles/mockFile2.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 20\` 

##### NOTE

- [ ] Please don't forget review \`Line: 21\` 
- [ ] another note \`Line: 2\` 

##### tODo:

- [ ] this should present \`Line: 5\` 
</details>

---
@mock-actor please review"
`;
